dmc-602 - quick review fixes